Agregacion de lista e icono de PS

--- a/index.html
+++ b/index.html
@@ -16,10 +16,22 @@
     
 <header>
     <div class="Cajanegra">
-        <nav><a href="https://www.sony.com/en/"><img src="Imagenes/LogoSony.jpg" alt="Logo Sony"></a></nav>
+        <a href="https://www.sony.com/en/"><img src="Imagenes/LogoSony.jpg" alt="Logo Sony"></a>
     </div>
 
     <div class="Cajablanca">
+        <nav>
+            <h1><a href="https://www.playstation.com/es-cr/""><img src="Imagenes/PSlogo.png" alt="Logo PS"></a></h1>
+            <ul>
+                <li><a href="https://www.playstation.com/es-cr/ps4/ps4-games/?smcid=pdc%3Aes-cr%3Agames-god-of-war-ragnarok%3Aprimary%20nav%3Amsg-games%3Aps4"">Juegos</a></li>
+                <li><a href="https://www.playstation.com/es-cr/ps5/?smcid=pdc%3Aes-cr%3Agames-god-of-war-ragnarok%3Aprimary%20nav%3Amsg-hardware%3Aps5"">Hardware</a></li>
+                <li><a href="https://www.playstation.com/es-cr/ps-plus/?smcid=pdc%3Aes-cr%3Agames-god-of-war-ragnarok%3Aprimary%20nav%3Amsg-services%3Aps-plus"">Servicios</a></li>
+                <li><a href="https://www.playstation.com/es-cr/editorial/this-month-on-playstation/?smcid=pdc%3Aes-cr%3Agames-god-of-war-ragnarok%3Aprimary%20nav%3Amsg-news%3Aeste-mes-en-playstation"">Noticias</a></li>
+                <li><a href="https://store.playstation.com/es-cr/pages/latest">Tienda</a></li>
+                <li><a href="https://status.playstation.com/es-cr/">Asistencia</a></li>
+
+            </ul>
+        </nav>
 
 
     </div>
