--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="Cajablanca">
         <nav>
-            <h1><a href="https://www.playstation.com/es-cr/""><img src="Imagenes/PSlogo.png" alt="Logo PS"></a></h1>
+            <h1><a href="https://www.playstation.com/es-cr/"><img src="Imagenes/PSlogo.png" alt="Logo PS"></a></h1>
             <ul>
                 <li><a href="https://www.playstation.com/es-cr/ps4/ps4-games/?smcid=pdc%3Aes-cr%3Agames-god-of-war-ragnarok%3Aprimary%20nav%3Amsg-games%3Aps4">Juegos</a></li>
                 <li><a href="https://www.playstation.com/es-cr/ps5/?smcid=pdc%3Aes-cr%3Agames-god-of-war-ragnarok%3Aprimary%20nav%3Amsg-hardware%3Aps5">Hardware</a></li>
