--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>God of War Ragnarök</title>
+    <title>🎮 Bloodborne™</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Condensed:wght@300&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -46,13 +49,107 @@
 
 
         </div>
-
-
-
-
     </header>
 
+    <main>
 
+        <div class="main1">
+            <div class="infojuego">
+                <ul>
+                    <li id="juego">Bloodborne™</li>
+                    <li id="empresa">Sony Interactive Entertainment</li>
+                    <li id="info">Disponible para PS5 PS4</li>
+
+                    <div class="items">
+                        <fieldset>
+
+                            <li class="precio"><label for="precio-dolares"><input type="radio" name="contacto"
+                                        value="US$69.99" id="precio-dolares" checked>US$19.99</label></li>
+
+
+                            <li class="precio"><label for="prueba"><input type="radio" name="contacto" value="US$69.99"
+                                        id="prueba">Prueba de juego</label>
+                                <p><br>Suscríbete a PlayStation Plus Deluxe para jugar <br> a la prueba del juego
+                                    completo
+                                    durante
+                                    3 horas</p>
+                            </li>
+
+                        </fieldset>
+                    </div>
+
+                    <div class="boton">
+                        <input type="submit" value="Agregar al carrito" id="botoncarrito">
+                    </div>
+
+
+                    <li>
+                        <p>Disponible 09/11/2022</p>
+                    </li>
+
+                    <div class="infogeneral">
+
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td>🌐 Juego offline activado</td>
+                                    <td>🎲 Version para PS5</td>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td>🙍 1 jugador</td>
+                                    <td>🎮 Compatible con la función de vibración y el efecto de gatillo</td>
+                                </tr>
+                                <tr>
+                                    <td>🕹️ Compatible con el Uso a distancia</td>
+                                    <td>💡 Compatible con Ayuda de juego</td>
+                                </tr>
+
+                            </tbody>
+
+                        </table>
+                    </div>
+
+                </ul>
+
+            </div>
+        </div>
+
+        <div class="main2">
+
+            <div class="cajatexto" >
+                <p class="Texto"><br><br><br>Enfrenta tus pesadillas mientras buscas respuestas en la antigua ciudad de Yharnam, ahora maldecida por una enfermedad endémica que se propaga por las calles como un fuego arrasador. El peligro, la muerte y la locura merodean en cada esquina de este mundo oscuro y espantoso, y debes descubrir sus secretos más oscuros para poder sobrevivir<br><br><br>.</p>
+
+
+                <p class="Texto">- Un nuevo mundo aterrador: Un viaje a una ciudad gótica horrorosa donde las pandillas desquiciadas y las criaturas horripilantes están al acecho en cada esquina.<br></p>
+                    <p class="Texto">- Combate de acción estratégica: Armado con un arsenal de armería exclusivo, con armas y cuchillas, necesitarás ingenio, estrategia y reflejos para acabar con los enemigos ágiles e inteligentes que guardan los oscuros secretos de la ciudad.<br></p>
+                        <p class="Texto">- Una nueva generación de RPG de acción: Entornos góticos asombrosamente detallados, iluminación ambiental y nuevas experiencias de avanzada en línea presentan el poder y las proezas del sistema PlayStation(R)4.<br></p>
+                            <p class="Texto">- Chalice Dungeons en constante cambio para explorar: Usa los cálices sagrados para poder entrar a una red de enormes ruinas subterráneas, repletas de trampas, bestias y recompensas, para explorarla y conquistarla solo o con otros usuarios. Estos calabozos generados por medio de procedimientos ofrecen desafíos totalmente nuevos a dominar y los puedes cargar o compartir con tus amigos.<br><br><br><br><br><br><br></p>
+            </div>
+            <div class="videos">         
+                <div class="ventanavideo">
+                    <h1>Trailer</h1>
+                    <iframe width="560px" height="315" src="https://www.youtube.com/embed/6Wz6bo1cS0E"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+
+                </div>>
+                <div class="ventanavideo">
+                    <h1>Gameplay + DLC Gameplay</h1>
+                    <iframe width="560px" height="315" src="https://www.youtube.com/embed/2Crk_GpxGQE"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+
+                </div>
+            </div>
+
+            <img class="BG" src="Imagenes/bg.jpg" alt="">
+        </div>
+    </main>
 </body>
 
 </html>
